<resources>
    <string name="app_name">svindo business</string>
    <string name="mobilenumbertxt">Mobile Number</string>
    <string name="continuetxt">Continue</string>
    <string name="otp">Enter the Otp Send to  +91</string>
    <string name="edit">9000626742</string>
    <string name="Didint"> Didn\'t recive OTP ?</string>
    <string name="resend"> RESEND</string>
    <string name="pending_douctments">Pending Douctments</string>
    <string name="myprofile">    My Profile</string>
    <string name="server_error">No Response from server, Please try again later!</string>
    <string name="identificat"> Identification Documents</string>
    <string name="vehicle_det"> Vehicle Details</string>
    <string name="bank_accoun"> Bank Account Details</string>
    <string name="emergency_c"> Emergency Contact</string>
    <string name="try_again">Something went wrong, Please try again later!</string>
    <string name="time_out">Unable to Reach Server, Due to Network Issues</string>
    <string name="no_network">Check Your Internet Connectivity</string>
    <string name="please_wait">Please wait.....</string>
    <string name="session_exp">Your session has expired, please login again</string>
    <string name="logout_toast">Successfully logged out !</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="snackbar_label">Your account has been blocked!</string>
    <string name="toolbar_image">toolbar Image</string>
    <string name="returned_orders">Returned Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="returned_items">Returned Items</string>
    <string name="no_data_found">No Data Found</string>
    <string name="edit_order_icon">edit order icon</string>
    <string name="order_details">Order Details</string>
    <string name="return_order">Return Orders</string>
    <string name="delivery">Delivery</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">
<u>Forgot Password</u>
</string>
    <string name="channel_id">svindobusinessChannelID</string>
    <string name="channel_name">svindobusinessChannel</string>
    <string name="channel_description">Svindobusiness Notifications</string>
    <string name="notification_id">101</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="resend_otp">
<u>Resend OTP</u>
</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="splash_screen">splash screen</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_order">
<b>Edit Order</b>
</string>
    <string name="submit">Submit</string>
    <string name="return_items">
<b>Returned Items</b>
</string>
    <string name="remove_icon">remove icon</string>
    <string name="increase_icon">increase icon</string>
    <string name="set_password">Set Password</string>
    <string name="login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="user_block_text">Your account has been blocked due to suspicious activity</string>
    <string name="allow">Allow Location Permission</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_my_account">My Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses">Expenses</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="my_wallet">My Wallet</string>
    <string name="view_more">View More</string>
    <string name="order_requests">Order Requests</string>
    <string name="session_expired">Your session has expired, please login again</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="amount">Amount</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="preference_file_key">`in`.webgrid.trolleykarodeliveryperson.PREFERENCE_FILE_KEY</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="camera">Capture photo from camera</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="select_source">Select Source</string>
    <string name="image_selected">Image Selected</string>
    <string name="reason">Reason</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="type_recurring_order">Recurring Order</string>
    <string name="type_normal_order">Normal Order</string>
    <string name="type_manual_order">Manual Order</string>
    <string name="package_order">Document Delivery</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="payment_details">Payment Details</string>
    <string name="package_order_accepted">Order Accepted</string>
    <string name="package_order_picked">Order Picked Up</string>
    <string name="package_order_reached">Destination Reached</string>
    <string name="package_order_delivered">Delivered</string>
    <string name="package_order_del_cancelled">Delivery Boy Cancelled</string>
    <string name="package_order_cancelled">Cancelled</string>
    <string name="amount_to_be_collected">Amount To Be Collected</string>
    <string name="instructions">INSTRUCTIONS:</string>
    <string name="view_map">View Map</string>
    <string name="date_time">Date | Time</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="package_content">Package Content</string>
    <string name="reached_to_destination">Reached To Destination</string>
    <string name="custmer">Customer name</string>
    <string name="burger_shop">Burger Shop</string>
    <string name="pickup_order">Pickup Order</string>
    <string name="order_id">ORDER ID</string>
    <string name="_6566text">6566556596</string>
    <string name="order_deatails">Order Deatails</string>
    <string name="burgershop">Burger Shop</string>
    <string name="store_details">Store Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="otpverification">OTP Verification</string>
    <string name="my_profile">My Profile</string>
    <string name="Vehicle_details">Vehicle Details</string>
    <string name="vehicle_text">
Enter details of the vehicle that you will use for tasks and orders
</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_model_et">e.g Bajaj pulsar 220cc</string>
    <string name="vehicle_num">Vehicle Number</string>
    <string name="vehicle_num_et">e.g Ts 08 HA 1234</string>
    <string name="addhartext">Aadhar Card</string>
    <string name="back_side_photo_txt">
Back side photo of your Aadhar card with your clear Address
</string>
    <string name="front_side_photo_txt">
Front side photo of your Aadhar card with your clear name and photo
</string>
    <string name="btn_txt">Submit</string>
    <string name="upload_photo_txt">
*please upload a focused photo of your Aadhar card for faster verification
</string>
    <string name="bank_acc_details">Add Bank Account Details</string>
    <string name="desc_txt">Enter Product Description
</string>
    <string name="ifsc_txt">Bank IFSC CODE</string>
    <string name="bank_name_txt">Bank Name</string>
    <string name="acc_num_txt">Account number</string>
    <string name="re_enter_txt">Re-Enter Account number</string>
    <string name="please_enter_ifsc_txt">Please Enter IFSC code</string>
    <string name="please_enter_bank_txt">Please Enter Bank name</string>
    <string name="enter_acc_num_txt">Please Enter Account number</string>
    <string name="re_enter_acc_num_txt">Please Re-Enter Account number</string>
    <string name="driving_license">Driving License</string>
    <string name="license_desc">
*please upload a focused photo of your Driving License for faster verification
</string>
    <string name="license_frnt">
Front side photo of your Driving License with your clear name and photo
</string>
    <string name="license_back">
Back side photo of your Driving License with your clear Address
</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="contact_details">
Provide contact details of someone you trust as an emergency contact
</string>
    <string name="emerge_mob_num">Emergency Contact Mobile Number</string>
    <string name="emerge_mob_num_et">e.g 9390776532</string>
    <string name="name_txt">Name</string>
    <string name="enter_name_et">e.g VARUN</string>
    <string name="relation_txt">Relation</string>
    <string name="relation_et">e.g Brother/Sister</string>
    <string name="my_prof_desc">
Enter the details below so we can get to know and serve you Better
</string>
    <string name="prim_mob_num">Primary Mobile Number</string>
    <string name="prim_mob_num_et">please Enter Mobile number</string>
    <string name="sec_mob_num">Secondary Mobile Number(Optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_et">Enter First Name</string>
    <string name="last_name_et">Enter Last Name</string>
    <string name="father_name">Father Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="city">City</string>
    <string name="address">Complete Address</string>
    <string name="father_name_et">Enter Father Name</string>
    <string name="dob_et">Select Date Of Birth</string>
    <string name="city_et">Enter City name</string>
    <string name="address_et">Enter Complete Address</string>
    <string name="prof_pic">Your Profile Picture</string>
    <string name="pan_txt">Pan Card Details</string>
    <string name="pan_desc">
*please upload a focused photo of your PAN card for faster verification
</string>
    <string name="frnt_pan_card">
Front side photo of your PAN card with your clear name and photo
</string>
    <string name="welcome_txt">Welcome Back,Sai</string>
    <string name="name_text">Kumar Shetty</string>
    <string name="mob_num">+91 9390776532</string>
    <string name="total_cash">Total Cash</string>
    <string name="online_txt">Online</string>
    <string name="total_balance">Total Balance</string>
    <string name="amount_txt">₹12,345</string>
    <string name="txt">1 week</string>
    <string name="trans_hist">Transactions History</string>
    <string name="orders_txt">Order :</string>
    <string name="account_txt">Account</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="shopviews_no">0</string>
    <string name="followers_no">0</string>
    <string name="shopexchange">Shop Exchange</string>
    <string name="all">All</string>
    <string name="readyforpickup">Ready For Pickup</string>
    <string name="delivered">Delivered</string>
    <string name="mycoupons">My Coupons</string>
    <string name="valid_time">Valid until July 27th 2023</string>
    <string name="percent">50% OFF</string>
    <string name="coup_desc">For every pizza order you have get 50% OFF by minimum spending amount is 200 </string>
    <string name="views">Views</string>
    <string name="clicks">Clicks</string>
    <string name="Stop">Stop</string>
    <string name="cancel_orders">Cancel Orders</string>
</resources>