<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/bannerviewsno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shopviews_no"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bannerviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/views"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/clicksno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_no"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/clicks"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deletebtn"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/red"
        android:background="@color/white"
        android:padding="5dp"
        android:textSize="11sp"
        android:text="@string/Stop" />
    </RelativeLayout>
</layout>