<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/mycoupons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/mycoupons"
        android:layout_weight="10"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/validtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/valid_time"
        android:textSize="12sp"
        android:textColor="@color/black" />
</LinearLayout>
            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/linearlayout"
                android:text="@string/percent"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black" />

                <TextView
                    android:id="@+id/coupondesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/percentage"
                    android:layout_margin="20dp"
                    android:text="@string/coup_desc"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
    </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
